--- a/res/xml/date_time_prefs.xml
+++ b/res/xml/date_time_prefs.xml
@@ -52,12 +52,12 @@
         android:title="@string/date_time_24hour"
         />
 
-</PreferenceScreen>
-
-<PreferenceScreen android:key="lockclock"
+  <PreferenceScreen
+        android:key="lockclock"
         android:title="@string/weather_settings_title"
         android:summary="@string/weather_settings_summary">
     <intent android:action="android.intent.action.MAIN"
             android:targetPackage="com.cyanogenmod.lockclock"
             android:targetClass="com.cyanogenmod.lockclock.preference.Preferences" />
+  </PreferenceScreen>
 </PreferenceScreen>
