Lockscreen weather options [2/2] Adapted for Tipsy with a lot of changes to include
- Created switch for extended statusbar weather
- Mapped LockClock settings because creating a widget to just to this is stupid
- Made use of what we had and removed redundant crap
- Checkboxes are ugly, who's idea was that? Also "weather informations" hahaha
- Added dependencies because it makes sense
- Cleaned up the code some what

- Moved to it's own category on coil since it has multiple settings
Change-Id: I186413598dd643ba2d7c79c248e75b2f39dfc658

Signed-off-by: Martinusbe <martinusbe@gmail.com>

Conflicts:
	res/values/gzr_arrays.xml
	res/values/tipsy_strings.xml
	res/xml/slim_interface_settings.xml
	res/xml/status_bar_settings.xml
	res/xml/weather.xml
	src/com/android/settings/slim/StatusBarWeather.java

--- a/res/xml/slim_interface_settings.xml
+++ b/res/xml/slim_interface_settings.xml
@@ -38,12 +38,12 @@
          android:key="button_settings"
          android:title="@string/button_pref_title"
          android:fragment="com.android.settings.ButtonSettings" />
-                                
+
       <PreferenceScreen
          android:key="power_menu"
          android:title="@string/power_menu_title"
          android:fragment="com.android.settings.cyanogenmod.PowerMenuActions" />
-         
+
       <PreferenceScreen
         android:key="lockscreen_tweaks"
         android:title="@string/lockscreen_tweaks_title"
@@ -53,7 +53,7 @@
         android:key="navigation_settings"
         android:fragment="com.android.settings.slim.NavigationSettings"
         android:title="@string/navigation_settings_title"			/>
-        
+
     <PreferenceScreen
         android:key="device_specific_gesture_settings"
         android:title="@string/gesture_settings_title" >
@@ -61,7 +61,13 @@
             android:action="com.cyanogenmod.action.LAUNCH_TOUCHSCREEN_GESTURE_SETTINGS"
             android:targetPackage="com.cyanogenmod.settings.device"
             android:targetClass="com.cyanogenmod.settings.device.TouchscreenGestureSettings" />
-     	</PreferenceScreen>    
+     	</PreferenceScreen>
+
+      <PreferenceScreen
+          android:key="weather"
+          android:fragment="com.android.settings.tipsy.Weather"
+          android:title="@string/weather_category" />
+	    </PreferenceScreen>    
 
        <!-- Notification Slider -->
      <PreferenceScreen
@@ -72,5 +78,5 @@
                     android:targetPackage="com.cyanogenmod.settings.device"
                     android:targetClass="com.cyanogenmod.settings.device.SliderSettings" />
        </PreferenceScreen>
- 
+
 </PreferenceScreen>
