--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -50,16 +50,16 @@
         android:defaultValue="true" />
 
   <!-- carrier label -->
-  
+
     <PreferenceScreen
         android:key="carrierlabel"
         android:fragment="com.android.settings.orion.CarrierLabel"
         android:title="@string/carrier_options" />
 
- 
+
      <PreferenceCategory
          android:title="@string/contextual_title" >
- 
+
         <com.android.settings.slim.SystemSettingSwitchPreference
         android:key="status_bar_custom_header"
         android:title="@string/status_bar_custom_header_title"
@@ -73,11 +73,11 @@
              android:entries="@array/custom_header_entries"
              android:entryValues="@array/custom_header_values"
              android:dependency="status_bar_custom_header"/>
-          
-  </PreferenceCategory> 
-  
+
+  </PreferenceCategory>
+
   <PreferenceScreen
-        android:fragment="com.android.settings.slim.StatusBarWeather"    
+        android:fragment="com.android.settings.slim.StatusBarWeather"
         android:key="status_bar_show_weather"
         android:title="@string/status_bar_show_weather_title"
         android:summary="@string/status_bar_show_weather_summary"
@@ -99,6 +99,27 @@
         android:fragment="com.android.settings.orion.StatusbarNotifications"
         android:title="@string/statusbar_notifications_category" />
 
+         <Preference
+            android:key="statusbar_notifications"
+            android:fragment="com.android.settings.tipsy.StatusbarNotifications"
+            android:title="@string/statusbar_notifications_category" />
+
+         <Preference
+            android:key="weather"
+            android:fragment="com.android.settings.tipsy.Weather"
+            android:title="@string/weather_category" />
+
+         <Preference
+            android:key="quicksettings"
+            android:fragment="com.android.settings.tipsy.QuickSettings"
+            android:title="@string/quicksettings_category" />
+
+         <PreferenceScreen
+            android:key="systemui_tuner_statusbar"
+            android:title="@string/systemui_tuner_statusbar_title" >
+            <intent
+                android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.TunerActivity" />
+         </PreferenceScreen>
 </PreferenceScreen>
-
-
