--- a/res/xml/date_time_prefs.xml
+++ b/res/xml/date_time_prefs.xml
@@ -53,3 +53,11 @@
         />
 
 </PreferenceScreen>
+
+<PreferenceScreen android:key="lockclock"
+        android:title="@string/weather_settings_title"
+        android:summary="@string/weather_settings_summary">
+    <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.cyanogenmod.lockclock"
+            android:targetClass="com.cyanogenmod.lockclock.preference.Preferences" />
+</PreferenceScreen>
