Add Superuser menu entry in main dashboard categories
- shows advanced privacy guard with only Superuser category from settings dashboard

- show only if superuser is enabled

Change-Id: I7180f6333e09bc12b4739d9b9bb18188ba9b050d
Signed-off-by: Jean-Pierre Rasquin <yank555.lu@gmail.com>

--- a/res/values/slim_arrays.xml
+++ b/res/values/slim_arrays.xml
@@ -25,6 +25,10 @@
         <item>@string/app_ops_categories_su</item>
     </string-array>
 
+    <string-array name="app_ops_categories_slim_su" translatable="false">
+        <item>@string/app_ops_categories_su</item>
+    </string-array>
+
     <!-- User display names for app ops codes - extension of AOSP -->
     <string-array name="app_ops_summaries_cm" translatable="false">
         <item>@string/app_ops_summaries_coarse_location</item>
